Fix overlapping fonts by symbols code

--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ option[disabled] {
 .entities__item--wide {
     flex-basis: 100%;
     max-width: 100%;
-    height: 115px;
+    height: 130px;
     margin: 15px 2px;
     border-width: 5px 0;
     border-top-color: hsl(100, 59%, 80%);
